End : Nav-bar & Add : Pages & Links
Création finit du menu déroulant et ajout de beaucoup de pages (voire changements ci-dessus) et réalisation des liens entre celle-ci

--- a/index.html
+++ b/index.html
@@ -11,31 +11,32 @@
 <!--Bare de navigation (Menu déroulant)-->
     <nav>
         <ul>
-            <li class="deroulant"><a href="">Biomes</a>
+            <li class="deroulant"><a href="Html/Biomes.html">Biomes</a>
                 <ul class="sous">
-                    <li><a href="@">Depth 0m - 500m &ensp;</a></li>
-                    <li><a href="@">Depth 500m - 1000m &ensp;</a></li>
-                    <li><a href="@">Depth 1000m - 1500m &ensp;</a></li>
-                    <li><a href="@">Ect.. &ensp;</a></li>
+                    <li><a href="Html/Dificulty-LV/Dificulty-1.html">Dificulty 1 &ensp;</a></li>
+                    <li><a href="Html/Dificulty-LV/Dificulty-2.html">Dificulty 2 &ensp;</a></li>
+                    <li><a href="Html/Dificulty-LV/Dificulty-3.html">Dificulty 3 &ensp;</a></li>
+                    <li><a href="Html/Dificulty-LV/Dificulty-4.html">Dificulty 4 &ensp;</a></li>
+                    <li><a href="Html/Dificulty-LV/Dificulty-5.html">Dificulty 5 &ensp;</a></li>
+                    <li><a href="Html/Dificulty-LV/Dificulty-Nightmare.html">Dificulty Nigtmare &ensp;</a></li>
                 </ul>
             </li>
-            <li class="deroulant"><a href="@">Creatures</a>
+            <li class="deroulant"><a href="Html/Mobs.html">Creatures</a>
                 <ul class="sous">
-                    <li><a href="@">Carnivores &ensp;</a></li>
-                    <li><a href="@">Herbivores &ensp;</a></li>
-                    <li><a href="@">Scavengers and Parasites &ensp;</a></li>
-                    <li><a href="@">Extinct species &ensp;</a></li>
-                    <li><a href="@">Ect.. &ensp;</a></li>
+                    <li><a href="Html/Mobs-Type/Mobs-Carnivore.html">Carnivores &ensp;</a></li>
+                    <li><a href="Html/Mobs-Type/Mobs-Herbivore.html">Herbivores &ensp;</a></li>
+                    <li><a href="Html/Mobs-Type/Parasite.html">Scavengers and Parasites &ensp;</a></li>
+                    <li><a href="Html/Mobs-Type/Mobs-Mort.html">Extinct species &ensp;</a></li>
                 </ul>
             </li>
-            <li class="deroulant"><a href="@">Lore</a>
+            <li class="deroulant"><a href="Html/Lore.html">Lore</a>
                 <ul class="sous">
-                    <li><a href="@">LandPods &ensp;</a></li>
-                    <li><a href="@">PDA &ensp;</a></li>
-                    <li><a href="@">Ect.. &ensp;</a></li>
+                    <li><a href="Html/Lore/LandPods.html">LandPods &ensp;</a></li>
+                    <li><a href="Html/Lore/PDA.html">PDA &ensp;</a></li>
+                    <li><a href="Html/Lore/Other.html">Other &ensp;</a></li>
                 </ul>
             </li>
-            <li><a href="@">Link</a></li>
+            <li><a href="Html/Link.html">Link</a></li>
         </ul>
     </nav>
 <!--Fin : Bare de navigation (Menu déroulant)-->
