--- a/Html/Lore/LandPods.html
+++ b/Html/Lore/LandPods.html
@@ -8,8 +8,9 @@
     <title>Home</title>
 </head>
 <body>
-<!--Bare de navigation (Menu déroulant)-->
-    <nav>
+    <div class="Main-Background">
+    <!--Bare de navigation (Menu déroulant)-->
+        <nav>
         <ul>
             <li class="deroulant"><a href="../Biomes.html">Biomes</a>
                 <ul class="sous">
@@ -38,7 +39,8 @@
             </li>
             <li><a href="../Link.html">Link</a></li>
         </ul>
-    </nav>
-<!--Fin : Bare de navigation (Menu déroulant)-->
+        </nav>
+    <!--Fin : Bare de navigation (Menu déroulant)-->
+    </div>
 </body>
 </html>
