--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link  rel="stylesheet" type="text/css" href="CSS/Overlay.css" media="all">
+    <link  rel="stylesheet" type="text/css" href="CSS/Main.css" media="all">
     <title>Home</title>
 </head>
 <body>
-<!--Bare de navigation (Menu déroulant)-->
-    <nav>
+    <div class="Main-Background">
+    <!--Bare de navigation (Menu déroulant)-->
+        <nav>
         <ul>
             <li class="deroulant"><a href="Html/Biomes.html">Biomes</a>
                 <ul class="sous">
@@ -38,7 +40,11 @@
             </li>
             <li><a href="Html/Link.html">Link</a></li>
         </ul>
-    </nav>
-<!--Fin : Bare de navigation (Menu déroulant)-->
+        </nav>
+    <!--Fin : Bare de navigation (Menu déroulant)-->
+    Test
+
+    </div>
+
 </body>
 </html>
