--- a/Html/Link.html
+++ b/Html/Link.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link  rel="stylesheet" type="text/css" href="../CSS/Overlay.css" media="all">
+    <link  rel="stylesheet" type="text/css" href="../CSS/Main.css" media="all">
     <title>Home</title>
 </head>
 <body>
@@ -41,6 +42,9 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+        <div>
+            <img src="../Images/Discord-Logo.png" title="Logo Discord" alt="Discord_Logo.png">
+        </div>
     </div>
 </body>
 </html>
