--- a/index.html
+++ b/index.html
@@ -42,9 +42,19 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
-    Test
-
+    <br>
+        <div>
+            Editeur :
+            <br>
+            <img src="Images/Unknow_World_Logo.jpg" title="Logo de UnknowWorld" alt="Unknow_World_Logo">
+        </div>
+        <div>
+            Date de création :
+            <br>
+            <br>
+            16 Décembre 2014
+        </div>
     </div>
-
+    
 </body>
 </html>
