--- a/Html/Dificulty-LV/Dificulty-1.html
+++ b/Html/Dificulty-LV/Dificulty-1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link  rel="stylesheet" type="text/css" href="../../CSS/Overlay.css" media="all">
+    <link  rel="stylesheet" type="text/css" href="../../CSS/Main.css" media="all">
     <title>Home</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
                     <li><a href="Dificulty-Nightmare.html">Dificulty Nigtmare &ensp;</a></li>
                 </ul>
             </li>
-            <li class="deroulant"><a href="Mobs.html">Creatures</a>
+            <li class="deroulant"><a href="../Mobs.html">Creatures</a>
                 <ul class="sous">
                     <li><a href="../Mobs-Type/Mobs-Carnivore.html">Carnivores &ensp;</a></li>
                     <li><a href="../Mobs-Type/Mobs-Herbivore.html">Herbivores &ensp;</a></li>
