--- a/Html/Lore/PDA.html
+++ b/Html/Lore/PDA.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link  rel="stylesheet" type="text/css" href="../../CSS/Overlay.css" media="all">
+    <link  rel="stylesheet" type="text/css" href="../../CSS/Main.css" media="all">
     <title>Home</title>
 </head>
 <body>
