--- a/Html/Link.html
+++ b/Html/Link.html
@@ -42,8 +42,20 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
-        <div>
-            <img src="../Images/Discord-Logo.png" title="Logo Discord" alt="Discord_Logo.png">
+        <div class="Dispo-Logo-Link">
+            <a href="https://discord.com/invite/subnautica">
+                <img class="Logo-Discord" src="../Images/Discord-Logo.png" title="Logo Discord" alt="Discord_Logo.png">
+            </a>
+            Si vous voulez partager votre avis et expérience sur ce magnifique jeux, N'hésiter pas a rejoindre le serveur Discord officiel de Subnautica.
+            <a href="https://www.youtube.com/c/subnautica">
+                <img class="Logo-Youtube" src="../Images/Youtube_Logo.png" title="Logo Youtube" alt="Youtube_Logo.png">
+            </a>
+            La chaine officiel de Subnautica sur la quelle vous pourrez trouver tous les traillers mais aussi de petites video explicant toutes les mise à jours.
+            <a href="https://store.steampowered.com/app/264710/Subnautica/">
+                <img class="Logo-Steam" src="../Images/Steam_Logo.png" title="Logo Steam" alt="Steam_Logo.png">
+            </a>
+            Si ce site vous a donner envie de vous lancer dans l'aventure ou tous simplement de regarder d'autres avis, cliquer pour vous rendre sur la page d'achats Steam de Subnautica.
+
         </div>
     </div>
 </body>
