--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!--Bare de navigation (Menu déroulant)-->
         <nav>
         <ul>
+            <li class="deroulant">                  
+                <img src="Images/Subnautica_Icon.png" title="Icon Subnautica" alt="Subnautica_Icon.png" class="Icon-Subnautica">
+            </li>
             <li class="deroulant"><a href="Html/Biomes.html">Biomes</a>
                 <ul class="sous">
                     <li><a href="Html/Dificulty-LV/Dificulty-1.html">Dificulty 1 &ensp;</a></li>
@@ -38,7 +41,9 @@
                     <li><a href="Html/Lore/Other.html">Other &ensp;</a></li>
                 </ul>
             </li>
-            <li><a href="Html/Link.html">Link</a></li>
+            <li>
+                <a href="Html/Link.html">Link</a>
+            </li>
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
