--- a/Html/Mobs-Type/Mobs-Mort.html
+++ b/Html/Mobs-Type/Mobs-Mort.html
@@ -31,6 +31,9 @@
                     <li><a href="Mobs-Mort.html">Extinct species &ensp;</a></li>
                 </ul>
             </li>
+            <li>
+                <img src="../../Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"> <a id="asup" href="../../index.html"></a>
+            </li>
             <li class="deroulant"><a href="../Lore.html">Lore</a>
                 <ul class="sous">
                     <li><a href="LandPods.html">LandPods &ensp;</a></li>
