--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
     <!--Bare de navigation (Menu déroulant)-->
         <nav>
         <ul>
-            <li class="deroulant">                  
-                <img src="Images/Subnautica_Icon.png" title="Icon Subnautica" alt="Subnautica_Icon.png" class="Icon-Subnautica">
-            </li>
             <li class="deroulant"><a href="Html/Biomes.html">Biomes</a>
                 <ul class="sous">
                     <li><a href="Html/Dificulty-LV/Dificulty-1.html">Dificulty 1 &ensp;</a></li>
@@ -33,6 +30,9 @@
                     <li><a href="Html/Mobs-Type/Parasite.html">Scavengers and Parasites &ensp;</a></li>
                     <li><a href="Html/Mobs-Type/Mobs-Mort.html">Extinct species &ensp;</a></li>
                 </ul>
+            </li>
+            <li>
+                <img src="Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"> <a id="asup" href="index.html"></a>
             </li>
             <li class="deroulant"><a href="Html/Lore.html">Lore</a>
                 <ul class="sous">
