--- a/Html/Link.html
+++ b/Html/Link.html
@@ -71,5 +71,9 @@
             <td>Si ce site vous a donner envie de vous lancer dans l'aventure ou tous simplement de regarder d'autres avis, cliquer pour vous rendre sur la page d'achats Steam de Subnautica.</td>
         </tr>
     </table>
+
+    <div id="creators">
+        Site créer par : Alexandre Szalai 
+    </div>
 </body>
 </html>
