--- a/Html/Dificulty-LV/Dificulty-1.html
+++ b/Html/Dificulty-LV/Dificulty-1.html
@@ -45,6 +45,68 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+        <div class="Dificulty-LV-Text">
+            Dificulty 1
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <td>Safe Shallows</td>
+                    <td>Kelp Forest</td>
+                    <td>Sparse Reef</td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="../Biomes/Biome-1.html"><img src="../../Images/Biomes/Dificulty-1/SafeShallows.png" title="Safe Shallows" alt="SafeShallows.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-2.html"><img src="../../Images/Biomes/Dificulty-1/KelpForestTrue.png" title="Kelp Forest" alt="KelpForestTrue.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-3.html"><img src="../../Images/Biomes/Dificulty-1/Sparse_Reef_Biome.png" title="Sparse Reef" alt="Sparse_Reef_Biome.png"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                0 - 80 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <li>Points of Interest :</li>
+                                - 2x Large Wrecks
+                            <br>- 2x Lava Geysers
+                            <br>- 7x Small Wrecks
+                            <br>- Lifepod 5
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                0 - 160 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <li>Points of Interest :</li>
+                                - Destroyed Lifepod
+                            <br>- 2x Large Wrecks                            
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                40 - 310 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Alien Vent Entrance Point
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
