--- a/Html/Dificulty-LV/Dificulty-2.html
+++ b/Html/Dificulty-LV/Dificulty-2.html
@@ -45,6 +45,107 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Dificulty-LV-Text">
+        Dificulty 2
+    </div>
+        <div>
+            <table>
+                <tr>
+                    <td>Grassy Plateaus</td>
+                    <td>Mushroom Forest</td>
+                    <td>Jellyshroom Caves</td>
+                    <td>Underwater Islands</td>
+                    <td>Floater Islands</td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/Grassy_Plateaus_Biome.png" title="Grassy Plateaus" alt="Grassy_Plateaus_Biome.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/MushroomEastTrue.png" title="Mushroom Forest" alt="MushroomEastTrue.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/2016-02-07_00009.png" title="Jellyshroom Caves" alt="2016-02-07_00009.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/UnderIslandsInfobox.png" title="Underwater Islands" alt="UnderIslandsInfobox.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-2/FloatingIsland1.png" title="Floater Islands" alt="FloatingIsland1.png"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                50 - 170 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <li>Points of Interest :</li>
+                                - 2x Destroyed Lifepods
+                            <br>- 5x Large Wrecks
+                            <br>- 6x Small Wrecks
+
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                75 - 250 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Purple Pinecone
+                            <br>- Sandstone Outcrop
+                            <br>- Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Alien Vent Entrance Point (Northeastern)
+                            <br>- Destroyed Lifepod (Northwestern)
+                            <br>- Large Wreck (Northwestern)
+                            <br>- Mushroom Forest Arch Cache (Northwestern)
+                            
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                180 - 300 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Degasi Seabase
+                            
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                35 - 500 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <br>- Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Alien Vent Entrance Point
+                            <br>- Large Wreck
+                            <br>- 8x Lava Geysers
+                            <br>- Thermal Vents
+
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                Above Sea Level
+                            <li>Points of Interest :</li>
+                                - 3x Degasi Seabases
+                            <br>- Floating Island Arch Cache
+
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
