--- a/Html/Dificulty-LV/Dificulty-3.html
+++ b/Html/Dificulty-LV/Dificulty-3.html
@@ -45,6 +45,90 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Dificulty-LV-Text">
+        Dificulty 3
+    </div>
+        <div>
+            <table>
+                <tr>
+                    <td>Bulb Zone</td>
+                    <td>Blood Kelp Zone</td>
+                    <td>Sea treader's Path</td>
+                    <td>Crag Field</td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/BulbZoneTrue.png" title="Bulb Zone" alt="BulbZoneTrue.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/BloodKelpZoneNorthTrue.png" title="Blood Kelp Zone" alt="BloodKelpZoneNorthTrue.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/STPTrue.png" title="Sea treader's Path" alt="STPTrue.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-3/Crag_Field_Biome.png" title="Crag Field" alt="Crag_Field_Biome.png"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                140 - 480 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Sandstone Outcrop
+                            <br>- Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Bulb Zone Arch Cache
+                            <br>- Destroyed Lifepod
+                            <br>- 2x Large Wrecks
+                            <br>- 3x Lava Geysers
+
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                150 - 675 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Destroyed Lifepod (Northern)
+                            <br>- Blood Kelp Sanctuary (Northern)
+                            <br>- Large Wreck (Trench)
+                            
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                170 - 360 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <br>- Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Large Wreck
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                125 - 460 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <br>- Shale Outcrop
+                            <li>Points of Interest :</li>
+                                - Crag Field Arch Cache
+                            <br>- Destroyed Lifepod
+                            
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
     </div>
 </body>
 </html>
