--- a/Html/Dificulty-LV/Dificulty-5.html
+++ b/Html/Dificulty-LV/Dificulty-5.html
@@ -45,6 +45,56 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Dificulty-LV-Text">
+        Dificulty 5
+    </div>
+        <div>
+            <table>
+                <tr>
+                    <td>Dunes</td>
+                    <td>Crash Zone</td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-5/Dunes_Biome.png" title="Dunes" alt="Dunes_Biome.png"></a>
+                    </td>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-5/CrashZoneTrue.png" title="Crash Zone" alt="CrashZoneTrue.png"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                65 - 400 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <li>Points of Interest :</li>
+                                - Alien Vent Entrance Point
+                            <br>- Dunes Sanctuary
+                            <br>- Giant Sinkhole
+                            <br>- 3x Large Wrecks
+                            <br>- Meteor Crater
+                            <br>- 9x Thermal Vents
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                0 - 370 Meters
+                            <li>Harvesting Nodes :</li>
+                                - Limestone Outcrop
+                            <br>- Sandstone Outcrop
+                            <li>Points of Interest :</li>
+                                - Destroyed Lifepod
+                            <br>- Aurora                           
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
     </div>
 </body>
 </html>
