--- a/Html/Dificulty-LV/Dificulty-Nightmare.html
+++ b/Html/Dificulty-LV/Dificulty-Nightmare.html
@@ -45,6 +45,32 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Dificulty-LV-Text">
+        Dificulty-Nightmare
+    </div>
+        <div>
+            <table>
+                <tr>
+                    <td>Void / Ecological Dead Zone / Crater Edge</td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="../Biomes/Biome-ect.html"><img src="../../Images/Biomes/Dificulty-6/Ecological_Dead_Zone.png" title="Void / Ecological Dead Zone / Crater Edge" alt="Ecological_Dead_Zone.png"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>Depth Range :</li>
+                                0 - ? Meters
+                            <li>Points of Interest :</li>
+                                - Something that is watching you from far on the distance ;)
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
     </div>
 </body>
 </html>
