--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <li><a href="Html/Mobs-Type/Mobs-Mort.html">Extinct species &ensp;</a></li>
                 </ul>
             </li>
-            <li><a id="asup" href="index.html"><img src="Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"></a>
+            <li>
+                <a id="asup" href="index.html"><img src="Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"></a>
             </li>
             <li class="deroulant"><a href="Html/Lore.html">Lore</a>
                 <ul class="sous">
