--- a/Html/Biomes.html
+++ b/Html/Biomes.html
@@ -45,6 +45,9 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+        <div class="Biomes-Title">
+            Biomes :
+        </div>
     </div>
 </body>
 </html>
