--- a/Html/Dificulty-LV/Dificulty-Nightmare.html
+++ b/Html/Dificulty-LV/Dificulty-Nightmare.html
@@ -45,7 +45,7 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
-    <div class="Dificulty-LV-Text">
+    <div id="Dificulty-LV-Text">
         Dificulty-Nightmare
     </div>
         <div>
