--- a/Html/Link.html
+++ b/Html/Link.html
@@ -68,7 +68,7 @@
         <tr>
             <td>Si vous voulez partager votre avis et expérience sur ce magnifique jeux, N'hésiter pas a rejoindre le serveur Discord officiel de Subnautica.</td>
             <td>La chaine officiel de Subnautica sur la quelle vous pourrez trouver tous les traillers mais aussi de petites video explicant toutes les mise à jours.</td>
-            <td>Si ce site vous a donner envie de vous lancer dans l'aventure ou tous simplement de regarder d'autres avis, cliquer pour vous rendre sur la page d'achats Steam de Subnautica.</td>
+            <td>Si ce site vous a donner envie de vous lancer dans l'aventure ou tous simplement de regarder d'autres avis, cliquer sur le logo Steam pour vous rendre sur la page d'achats Steam de Subnautica.</td>
         </tr>
     </table>
 
