--- a/Html/Mobs-Type/Mobs-Carnivore.html
+++ b/Html/Mobs-Type/Mobs-Carnivore.html
@@ -45,6 +45,10 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+        <div class="Mobs-Carnivores-Text">
+            Carnivores
+        </div>
+            
     </div>
 </body>
 </html>
